--- a/content/data/config.json
+++ b/content/data/config.json
@@ -9,7 +9,7 @@
         "has_nav": true,
         "nav_links": [
             {
-                "label": "Features",
+                "label": "Service",
                 "url": "/features",
                 "style": "link"
             },
