--- a/content/data/config.json
+++ b/content/data/config.json
@@ -19,7 +19,7 @@
                 "style": "link"
             },
             {
-                "label": "Sign Up",
+                "label": "Nous contacter",
                 "url": "/signup",
                 "style": "primary"
             }
