config.json: updated label in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -14,7 +14,7 @@
                 "style": "link"
             },
             {
-                "label": "Style Guide",
+                "label": "A propos",
                 "url": "/style-guide",
                 "style": "link"
             },
