--- a/content/data/config.json
+++ b/content/data/config.json
@@ -19,7 +19,7 @@
                 "style": "link"
             },
             {
-                "label": "lorem-ipsum",
+                "label": "Blog",
                 "url": "#",
                 "style": "link",
                 "has_icon": false,
