--- a/content/data/config.json
+++ b/content/data/config.json
@@ -20,7 +20,7 @@
             },
             {
                 "label": "Blog",
-                "url": "#",
+                "url": "/blog",
                 "style": "link",
                 "has_icon": false,
                 "icon": "arrow-left",
