--- a/content/data/config.json
+++ b/content/data/config.json
@@ -42,8 +42,7 @@
                 "type": "footer_text",
                 "image": "images/logo-alt.svg",
                 "image_url": "/",
-                "image_alt": "Footer logo",
-                "content": "Stackbit theme demo"
+                "image_alt": "Footer logo"
             },
             {
                 "type": "footer_nav",
