--- a/content/data/config.json
+++ b/content/data/config.json
@@ -40,7 +40,7 @@
         "sections": [
             {
                 "type": "footer_text",
-                "image": "images/logo-alt.svg",
+                "image": "images/logo sans icon couleur.png",
                 "image_url": "/",
                 "image_alt": "Footer logo"
             },
