--- a/content/data/config.json
+++ b/content/data/config.json
@@ -49,7 +49,7 @@
                 "title": "Company",
                 "nav_links": [
                     {
-                        "label": "A propos",
+                        "label": "À propos",
                         "url": "/about",
                         "style": "link"
                     },
