config.json: updated label in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -59,7 +59,7 @@
                         "style": "link"
                     },
                     {
-                        "label": "Contact",
+                        "label": "Service",
                         "url": "/contact",
                         "style": "link"
                     }
