config.json: updated url in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -60,7 +60,7 @@
                     },
                     {
                         "label": "Service",
-                        "url": "/contact",
+                        "url": "/features",
                         "style": "link"
                     }
                 ]
