config.json: updated label in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -59,7 +59,7 @@
                         "style": "link"
                     },
                     {
-                        "label": "Service",
+                        "label": "À propos",
                         "url": "/features",
                         "style": "link"
                     }
