--- a/content/data/config.json
+++ b/content/data/config.json
@@ -50,7 +50,7 @@
                 "nav_links": [
                     {
                         "label": "Service",
-                        "url": "/about",
+                        "url": "/features",
                         "style": "link"
                     },
                     {
