--- a/content/data/config.json
+++ b/content/data/config.json
@@ -46,7 +46,7 @@
             },
             {
                 "type": "footer_nav",
-                "title": "Company",
+                "title": "Entreprise",
                 "nav_links": [
                     {
                         "label": "Service",
