--- a/content/data/config.json
+++ b/content/data/config.json
@@ -67,7 +67,7 @@
             },
             {
                 "type": "footer_nav",
-                "title": "Community",
+                "title": "Nous suivre",
                 "nav_links": [
                     {
                         "label": "LinkedIn",
