config.json: updated image in sections

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -85,7 +85,8 @@
                 "image_alt": "lorem-ipsum",
                 "image_url": "lorem-ipsum",
                 "title": "lorem-ipsum",
-                "type": "footer_text"
+                "type": "footer_text",
+                "image": "images/marvelous-neptune.png"
             }
         ],
         "has_nav": true,
