config.json: updated title in sections

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -88,7 +88,7 @@
                 ]
             },
             {
-                "title": "lorem-ipsum",
+                "title": "En savoir plus",
                 "nav_links": [],
                 "type": "footer_nav"
             }
