config.json: updated style in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -93,7 +93,7 @@
                     {
                         "label": "lorem-ipsum",
                         "url": "#",
-                        "style": "link",
+                        "style": "primary",
                         "has_icon": false,
                         "icon": "arrow-left",
                         "icon_position": "left",
