--- a/content/data/config.json
+++ b/content/data/config.json
@@ -92,7 +92,7 @@
                 "nav_links": [
                     {
                         "label": "lorem-ipsum",
-                        "url": "#",
+                        "url": "/contact",
                         "style": "primary",
                         "has_icon": false,
                         "icon": "arrow-left",
