--- a/content/data/authors/jane-doe.yaml
+++ b/content/data/authors/jane-doe.yaml
@@ -1,5 +1,5 @@
 first_name: François
-last_name: Doe
+last_name: Tanniou
 bio: >-
   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
   incididunt ut labore et dolore magna aliqua. Risus nullam eget felis eget nunc
