config.json: updated base_font

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -1,7 +1,7 @@
 {
     "title": "Coworkranking",
     "path_prefix": "/",
-    "base_font": "nunito-sans",
+    "base_font": "fira-sans",
     "palette": "green",
     "header": {
         "logo_img": "images/LOGO PNG ALL BLUE.png",
